Limit float:left on .dijitTabStrip to IE6, where it's needed to fix a rendering glitch w/a gap in the tabstrip.   Doesn't fix the button-moving problem on IE7 (although perhaps it's happening less often), but does fix some rendering issues when dir=rtl:   - safari now working except for bottom tabs on soria (tab labels not shown) and nihilo (slight coloring problem at edges of tab buttons)   - IE7: improved, looks correct until selecting a tab from the menu
Refs #9004.

git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@19756 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1132,8 +1132,11 @@ img.dijitColorPaletteUnder {
 .dijitTabContainer .tabStripSlideButtonLeft {
 	float: left;
 }
-.dijitTabContainer .dijitTabListWrapper {
+.dj_ie6 .dijitTabContainer .dijitTabListWrapper {
+	/* fixes gaps in the tabstrip on IE6 */
 	float: left;
+}
+.dijitTabContainer .dijitTabListWrapper {
 	overflow: hidden;
 }
 
